gitops/overlays/aws-eks/frontend-secrets-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sri-frontend
spec:
  template:
    spec:
      serviceAccountName: sri-facturacion-sa
      containers:
        - name: sri-frontend
          volumeMounts:
            - name: secrets-store
              mountPath: /mnt/secrets-store
              readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: sri-facturacion-aws-secrets
